[package]
name = "catenis_api_client"
description = "Catenis API client library for the Rust programming language"
version = "2.0.1"
authors = ["Cláudio Sá de Castro <claudio@hiades.com.br>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/blockchainofthings/CatenisAPIClientRust"
documentation = "https://docs.rs/catenis_api_client"
keywords = ["Catenis", "API", "client", "blockchain"]
categories = ["api-bindings"]

[package.metadata.docs.rs]
# Make sure that documentation includes all available features
all-features = true

[features]
async = [
    "async-compression/zlib",
    "async-compression/tokio-02",
    "tokio-tungstenite/connect",
    "tokio-tungstenite/tls",
    "tokio/rt-core",
    "tokio/io-util",
    "tokio/sync",
    "tokio/time",
]

[dependencies]
# NOTE: due to a limitation of the 'reqwest' module that currently (as of ver. 0.10) only supports
#       version 0.2 of the 'tokio' package, for all the dependency packages that dependend on 'tokio',
#       we must use (for now) the corresponding version and/or feature that targests version 0.2 of
#       the 'tokio' package. This includes the following packages: tokio (itself), async-compression
#       (feature "tokio-02"), tokio-tungstenite (ver. 0.11), and of course reqwest.
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
reqwest = { version = "0.10", features = ["blocking", "json", "gzip"] }
url = "2.2"
# NOTE: the version of the 'tungstenite' package must match the version of that
#       package on which the 'tokio-tungstenite' package depends
tungstenite = "0.11"
tokio-tungstenite = { version = "0.11", default-features = false, features = ["connect", "tls"], optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
bitcoin_hashes = "0.9"
time = { version = "0.2", features = ["serde"] }
flate2 = "1.0"
async-compression = { version = "0.3", default-features = false, features = ["tokio-02", "zlib"], optional = true }
tokio = { version = "0.2", default-features = false, features = ["rt-core", "io-util", "sync", "time"], optional = true }
regex = "1"

[dev-dependencies]
tokio = { version = "0.2", default-features = false, features = ["macros"] }
tiny_http = { version = "0.7", features = ["ssl"] }
once_cell = "1.5"