[package]
name = "catenis_api_client"
description = "Catenis API client library for the Rust programming language"
version = "2.0.1"
authors = ["Cláudio Sá de Castro <claudio@hiades.com.br>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/blockchainofthings/CatenisAPIClientRust"
documentation = "https://docs.rs/catenis_api_client"
keywords = ["Catenis", "API", "client", "blockchain"]
categories = ["api-bindings"]

[package.metadata.docs.rs]
# Make sure that documentation includes all available features
all-features = true

[features]
async = [
    "async-compression/zlib",
    "async-compression/tokio",
    "tokio-tungstenite/connect",
    "tokio-tungstenite/native-tls",
    "tokio/rt",
    "tokio/io-util",
    "tokio/sync",
    "tokio/time",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
url = "2.2"
# NOTE: the version of the 'tungstenite' package must match the version of that
#       package on which the 'tokio-tungstenite' package depends
tungstenite = "0.17"
tokio-tungstenite = { version = "0.17", default-features = false, features = ["connect", "native-tls"], optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
bitcoin_hashes = "0.9"
time = { version = "0.2", features = ["serde"] }
flate2 = "1.0"
async-compression = { version = "0.3", default-features = false, features = ["tokio", "zlib"], optional = true }
tokio = { version = "1", default-features = false, features = ["rt", "io-util", "sync", "time"], optional = true }
regex = "1"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros"] }
tiny_http = { version = "0.7", features = ["ssl"] }
once_cell = "1.5"